<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;
use Illuminate\Database\Eloquent\Factories\HasFactory;

class Project extends Model
{
    use HasFactory;
    protected $fillable = ['title', 'description'];

    public function tasks() {
        return $this->belongsToMany(Task::class);
    }
}
